--- a/polls/templates/polls/results.html
+++ b/polls/templates/polls/results.html
@@ -1,24 +1,39 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
     <title>Results</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href=''>
-    <script src=''></script>
-</head>
-<body>
+  </head>
+  <body>
+      <div class="container">
+          
     <h1>{{ question.question_text }}</h1>
+    <table class="table">
+        {% for choice in question.choice_set.all %}
+        <tr>
+            <td>
+                {{ choice.choice_text }}
+            </td>
+            <td>
+                {{ choice.vote }} vote{{ choice.vote|pluralize }}
 
-<ul>
-{% for choice in question.choice_set.all %}
-    <li>{{ choice.choice_text }} -- {{ choice.vote }} vote{{ choice.vote|pluralize }}</li>
-{% endfor %}
-</ul>
+            </td>
+        </tr>
+        {% endfor %}
+    </table>
+    <a href="{% url 'polls:detail' question.id %}"><button class="btn btn-primary">Vote again?</button></a>
 
-<a href="{% url 'polls:detail' question.id %}">Vote again?</a>
-</br>
-<a href="{% url 'polls:index' %}">Questions</a>
-</body>
+<a href="{% url 'polls:index' %}"><button class="btn btn-primary">Questions</button></a></div>
+<!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  </body>
 </html>
